--- a/css/main.css
+++ b/css/main.css
@@ -311,8 +311,8 @@ section {
 }
 
 .our-services .col-sm-4 {
-  border-right:1px solid #f2f2f2;
-  border-bottom:1px solid #f2f2f2;
+  /*border-right:1px solid #f2f2f2;
+  border-bottom:1px solid #f2f2f2;*/
   padding-bottom: 50px;
 }
 
